--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap");
 body {
   margin: 0;
-  font-family: 'Spartan', sans-serif;
+  font-family: "Spartan", sans-serif;
 }
 
 .contMain {
@@ -16,14 +16,12 @@ body {
   grid-area: title;
   grid-column: 1/2;
 }
-
 .contTitle h1 {
   color: #502050;
   text-align: center;
   font-weight: 700;
   font-size: 30px;
 }
-
 .contTitle p {
   text-align: center;
   font-weight: 500;
@@ -45,13 +43,11 @@ body {
   background: #f3ecf3;
   padding: 10px;
 }
-
 .contStarsImg div:nth-child(1) {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   column-gap: 10px;
 }
-
 .contStarsImg div:nth-child(2) h5 {
   text-align: center;
   margin: 10px;
@@ -73,24 +69,20 @@ body {
   padding: 20px;
   column-gap: 20px;
 }
-
 .contCardsItem div:nth-child(1) {
   grid-column: 1/2;
   display: grid;
   align-items: center;
 }
-
 .contCardsItem div:nth-child(1) img {
   border-radius: 50%;
   width: 50px;
 }
-
 .contCardsItem div:nth-child(2) {
   grid-column: 2/3;
   display: grid;
   align-items: center;
 }
-
 .contCardsItem div:nth-child(2) h5 {
   text-transform: capitalize;
   color: white;
@@ -98,18 +90,15 @@ body {
   font-weight: 500;
   margin: 0px;
 }
-
 .contCardsItem div:nth-child(2) p {
   color: #ee68a4;
   font-size: 15px;
   font-weight: 400;
   margin: 0px;
 }
-
 .contCardsItem div:nth-child(3) {
   grid-column: 1/3;
 }
-
 .contCardsItem div:nth-child(3) p {
   font-size: 13px;
   font-weight: 400;
@@ -124,7 +113,6 @@ body {
   margin-top: 10px;
   background: #0F4C5C;
 }
-
 .attribution div {
   grid-column: 1/2;
   display: grid;
@@ -133,21 +121,18 @@ body {
   align-items: center;
   height: 10px;
 }
-
 .attribution div span {
   color: #F2F4F3;
   grid-column: 1/2;
   text-align-last: left;
   margin-left: 10px;
 }
-
 .attribution div a {
   text-decoration: none;
   color: #E4572E !important;
   grid-column: 2/5;
   text-align-last: left;
 }
-
 .attribution div a:hover {
   color: white;
 }
@@ -158,14 +143,12 @@ body {
     column-gap: 20px;
   }
 }
-
 @media screen and (orientation: landscape) {
   .contStars, .contCards {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 20px;
   }
 }
-
 @media screen and (min-width: 769px) and (max-width: 1980px) {
   .contMain {
     grid-template-columns: 400px 1fr;
@@ -174,6 +157,7 @@ body {
     width: 90%;
     margin: 0 auto;
   }
+
   .contTitle {
     grid-column: 1/2;
     grid-row: 1/2;
@@ -187,6 +171,7 @@ body {
   .contTitle p {
     line-height: 1.6;
   }
+
   .contStars {
     grid-row: 1/2;
     grid-column: 2/3;
@@ -194,19 +179,24 @@ body {
     justify-items: center;
     align-content: center;
   }
+
   .contCards {
     grid-row: 2/3;
     grid-column: 1/3;
   }
+
   .contCardsItem {
     height: 170px;
   }
+
   .contCardsItem2 {
     margin-top: 20px;
   }
+
   .contCardsItem3 {
     margin-top: 40px;
   }
+
   .contStarsImg {
     align-items: center;
     grid-template-columns: auto 1fr;
@@ -220,12 +210,15 @@ body {
   .contStarsImg div:nth-child(2) h5 {
     margin: 0;
   }
+
   .contStarsImgleft {
     margin-left: 100px;
   }
+
   .contStarsImgleft2 {
     margin-left: 200px;
   }
+
   .attribution {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -237,5 +230,4 @@ body {
     padding: 10px 0;
     grid-column: 2/3;
   }
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
