--- a/styles.sass
+++ b/styles.sass
@@ -86,32 +86,21 @@ body
       font-weight: 400
       color: white
       line-height: 1.6
-.attribution
-  display: grid
-  grid-template-columns: auto 1fr
-  grid-template-rows: 1fr
-  margin-top: 10px
-  background: #0F4C5C
-  div
-    grid-column: 1/2
-    display: grid
-    grid-template-columns: 100px 1fr
-    padding: 20px 0
-    align-items: center
-    height: 10px
-    span
-      color: #F2F4F3
-      grid-column: 1/2
-      text-align-last: left
-      margin-left: 10px
-    a
-      text-decoration: none
-      color: #E4572E !important
-      grid-column: 2/5
-      text-align-last: left
-      &:hover
-        color: white
 
+.containerFooter
+  display: grid
+  justify-items: center
+  background: #000
+  width: 100%
+  h3
+    color: #fff
+    text-align: center
+  a
+    color: #FF3F00
+    text-transform: capitalize
+    text-decoration: none
+    &:hover
+      text-decoration: underline
 
 @media screen and ( min-width: 569px ) and (max-width: 768px) 
   .contStars, .contCards
